--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -12,6 +12,11 @@
         }
     }
 
+    .ldio-ok2xqi5yisq {
+        position: relative;
+        margin: 0 auto;
+    }
+
     .ldio-ok2xqi5yisq div>div {
         position: absolute;
         width: 24px;
